# fps-game-rust-win

./: .gitignore  Cargo.toml  README.md  release.ps1  run.ps1
src/: main.rs
