[package]
name = "fps-game"
version = "0.1.0"
authors = ["Luis <luis.ernesto951008@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winapi = "0.3.8"

[features]
default = ["winapi/wincon", "winapi/winnt", "winapi/ntdef"]
